2021-12-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 1.78.0-0

2021-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): See Version to 1.77.99-0 for interim
	test release

	* inst/include/boost: As before, adjusted to CRAN Policy requirements
	of i) not path names under 104 chars and b) no diagnostic suppression
	* local/patches/bh_1.78.0-0*patch: Document these

2021-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/boost/*: Upgraded to Boost 1.78

	* local/scripts/CreateBoost.sh: Update for 1.78.0, added lambda2

2021-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add total download badge, label other as monthly

2021-11-04  Dirk Eddelbuettel  <edd@debian.org>

 	* README.md: Remove Travis badge
	* .travis.yml: Remove Travis YAML config

2021-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): List GitHub repo and package page

2020-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Small tweaks to CI YAML file

2020-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 1.75.0-0

	* inst/include/boost/*: Upgraded to Boost 1.75

	* README.md: Updated package list for 1.75
	* DESCRIPTION (Description): Idem

	* local/scripts/CreateBoost.sh: Update for 1.75.0, added beast

	* .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

	* README.md: Update several URLs to https
	* inst/NEWS.Rd: Idem

2020-05-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/LICENSE_1_0.txt: Included from upstream tar.gz

2020-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Minor badge rearrangement, added example

2020-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added badges, edited, fixed typo

2020-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* NAMESPACE: Removed as not needed without R code

2019-12-28  Dirk Eddelbuettel  <edd@debian.org>
